# statime

./: .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  config.toml  datasets.md  mkdocs.yml  statime.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  packaging.yml  rust.yml
docs/: index.md
docs/development/: development-process.md  threatmodel.md
docs/examples/conf/: 41-statime.rules  statime-61850.toml  statime-metrics-exporter.service  statime.preset  statime.service  statime.toml.default
docs/guide/: exporting-metrics.md  getting-started.md
docs/man/: statime-linux.8.md  statime-metrics-exporter.8.md  statime.8.md  statime.toml.5.md  statime.toml.x.md
docs/precompiled/man/: statime-linux.8  statime-metrics-exporter.8  statime.8  statime.toml.5
examples/linux/: Cargo.toml
examples/linux/src/: main.rs
examples/stm/: Cargo.toml  build.rs
examples/stm/.cargo/: config.toml
examples/stm/src/: device.rs  lib.rs  main.rs  phy.rs  runtime.rs  static_ethernet.rs
examples/stm/src/eth/: LICENSE  mod.rs
examples/stm/src/eth/_version/: mod.rs  rx_desc.rs  tx_desc.rs
examples/test-bc/: Cargo.toml
examples/test-bc/src/: main.rs
fuzz/fuzz_targets/: message_sound.rs
pkg/deb/: COPYRIGHT-debian  postinst  postrm  prerm
pkg/rpm/: scriptlets.toml
pkg/test-scripts/: test-statime.sh
src/: port.rs
src/clock/: mod.rs
src/clock/linux_clock/: mod.rs  raw.rs
statime/: Cargo.toml
statime-linux/: Cargo.toml  build.rs
statime-linux/src/: fixed_key_experiment.rs  lib.rs  main.rs  observer.rs  securityprovider.rs  socket.rs  tlvforwarder.rs
statime-linux/src/clock/: mod.rs  raw.rs  timex.rs
statime-linux/src/config/: mod.rs
statime-linux/src/ke/: client.rs  common.rs  mod.rs  record.rs  server.rs  tls_utils.rs
statime-linux/src/metrics/: exporter.rs  format.rs  mod.rs
statime-linux/src/network/: interface.rs  linux.rs  linux_syscall.rs  mod.rs  timestamped_udp_socket.rs
statime-linux/testkeys/: test.chain.pem  test.ext  test.key  test.pem  testca.srl
statime-stm-embassy/: Cargo.toml
statime-stm-embassy/src/: lib.rs
statime-stm-embassy/src/clock/: mod.rs
statime-stm-embassy/src/clock/stm32_eth/: mod.rs  peripherals.rs  setup.rs
statime-stm-embassy/src/clock/stm32_eth/dma/: desc.rs  mod.rs  packet_id.rs  ring.rs
statime-stm-embassy/src/clock/stm32_eth/dma/rx/: descriptor.rs  mod.rs
statime-stm-embassy/src/clock/stm32_eth/dma/tx/: descriptor.rs  mod.rs
statime-stm-embassy/src/clock/stm32_eth/mac/: miim.rs  mod.rs
statime-stm-embassy/src/clock/stm32_eth/ptp/: mod.rs  pps_pin.rs  timestamp.rs
statime-stm-embassy/src/network/: mod.rs
statime-stm32/: Cargo.toml  rust-toolchain.toml
statime-stm32/.cargo/: config.toml
statime-stm32/src/: ethernet.rs  main.rs  port.rs  ptp_clock.rs  ptp_state_mutex.rs
statime/fuzz/: Cargo.toml
statime/fuzz/fuzz_targets/: fuzz_target_1.rs  message_parse.rs
statime/src/: clock.rs  crypto.rs  float_polyfill.rs  lib.rs  network.rs  overlay_clock.rs  port.rs  ptp_instance.rs  shared_clock.rs
statime/src/bmc/: acceptable_master.rs  bmca.rs  dataset_comparison.rs  foreign_master.rs
statime/src/clock/: mod.rs
statime/src/config/: instance.rs  mod.rs  port.rs
statime/src/crypto/: ring.rs
statime/src/datastructures/: mod.rs
statime/src/datastructures/common/: clock_accuracy.rs  clock_identity.rs  clock_quality.rs  grandmaster_v1.rs  leap_indicator.rs  mod.rs  port_identity.rs  time_interval.rs  time_source.rs  timestamp.rs  timestamp_v1.rs  tlv.rs  tlv_type.rs
statime/src/datastructures/datasets/: current.rs  default.rs  mod.rs  parent.rs  path_trace.rs  port.rs  time_properties.rs
statime/src/datastructures/messages/: .p_delay_resp_follow_up.rs.swp  announce.rs  delay_req.rs  delay_resp.rs  follow_up.rs  header.rs  management.rs  management_action.rs  mod.rs  p_delay_req.rs  p_delay_resp.rs  p_delay_resp_follow_up.rs  signaling.rs  sync.rs
statime/src/datastructures/messages_v1/: control_field.rs  delay_resp.rs  follow_up.rs  header.rs  mod.rs  sync_or_delay_req.rs
statime/src/filters/: basic.rs  kalman.rs  matrix.rs  mod.rs
statime/src/network/: mod.rs  test.rs
statime/src/observability/: current.rs  default.rs  mod.rs  parent.rs  port.rs
statime/src/port/: actions.rs  bmca.rs  error.rs  master.rs  measurement.rs  mod.rs  slave.rs  state.rs  tests.rs
statime/src/port/state/: master.rs  mod.rs  slave.rs  uncalibrated.rs
statime/src/time/: duration.rs  instant.rs  interval.rs  mod.rs
utils/: build-release.sh  generate-man.sh  prepare-artifacts.sh  release.sh  update-version.sh
validation/24-11-2023-boundary-clock/: i210-bc-offset.gnuplot  i210-direct-offset.gnuplot  report.md
