[workspace]
members = [
    "statime",
    "statime-linux",
]
exclude = [
    "statime-stm32"
]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pendulum-project/statime"
homepage = "https://github.com/pendulum-project/statime"
publish = true
authors = [
    "David Venhoek <david@tweedegolf.com>",
    "Folkert de Vries <folkert@tweedegolf.com>",
    "Dion Dokter <dion@tweedegolf.com>",
    "Ruben Nijveld <ruben@tweedegolf.com>",
    "David Venhoek <david@tweedegolf.com>",
    "Bram Bruines <bram@tweedegolf.com>",
    "Marlon Peeters <marlonpeeters@tweedegolf.com>",
    "Rick van der Wal <rick@tweedegolf.com>"
]
rust-version = "1.67" # MSRV

[workspace.dependencies]
arrayvec = { version = "0.7.4", default-features = false }
clap = { version = "4.4.7", features = ["derive"] }
tracing = "0.1.21"
tracing-log = ">=0.1.0, <0.3.0"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["std", "fmt", "ansi"] }
hex = "0.4.3"
libc = { version = "0.2.150", features = ["extra_traits"] }
log = { version = "0.4.20", default-features = false }
pin-project-lite = "0.2.13"
toml = ">=0.5.0, <0.9.0"
tokio = "1.33"
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.111" }
serde_test = { version = "1.0.176" }
az = "1.2.1"
fixed = "1.24"
libm = "0.2.8"

clock-steering = "0.2.0"
timestamped-socket = "0.2.4"


# our own crates used as dependencies, same version as the workspace version
# NOTE: keep this part at the bottom of the file, do not change this line
statime = { version = "0.2.2", path = "./statime" }

[profile.release]
debug = 2
