[package]
name = "statime-linux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "statime"
path = "src/main.rs"

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
clap = { version = "4.4.7", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
hex = "0.4.3"
libc = { version = "0.2.150", features = ["extra_traits"] }
log = "0.4.20"
statime = { path = "../statime" }
pin-project-lite = "0.2.13"
toml = ">=0.5.0, <0.9.0"
tokio = { version = "1.33", features = ["net", "rt-multi-thread", "time", "macros", "sync"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
serde = { version = "1.0.192", features = ["derive"] }

clock-steering = { git = "https://github.com/pendulum-project/clock-steering.git", rev = "716a540" }
timestamped-socket = { git =  "https://github.com/pendulum-project/timestamped-socket.git", rev = "d0e4ed7", features = ["serde"] }

[package.metadata.deb]
name = "statime"
priority = "optional"
section = "net"
copyright = "Copyright (c) 2022-2023 Tweede Golf and Contributors"
license-file = "../pkg/deb/COPYRIGHT-debian"
maintainer = "Statime Maintainers <statime-maintainer@tweedegolf.com>"
maintainer-scripts = "../pkg/deb/"
assets = [
  ["target/release/statime", "/usr/bin/statime", "755"],
  ["docs/precompiled/man/statime.8", "/usr/share/man/man8/statime.8", "644"],
#  ["docs/precompiled/man/statime.toml.5", "/usr/share/man/man5/statime.toml.5", "644"],
  ["docs/examples/conf/statime.toml.default", "/usr/share/doc/statime/statime.toml.default", "644"],
  ["docs/examples/conf/statime.toml.default", "/etc/statime/statime.toml", "644"],
  ["docs/examples/conf/statime.preset", "/lib/systemd/system-preset/50-statime.preset", "644"],
  ["docs/examples/conf/statime.service", "/lib/systemd/system/statime.service", "644"],
  ["../COPYING", "/usr/share/doc/statime/COPYING", "644"],
  ["../LICENSE-APACHE", "/usr/share/doc/statime/LICENSE-APACHE", "644"],
  ["../LICENSE-MIT", "/usr/share/doc/statime/LICENSE-MIT", "644"],
  ["../CHANGELOG.md", "/usr/share/doc/statime/CHANGELOG.md", "644"],
  ["../README.md", "/usr/share/doc/statime/README.md", "644"],
]
conf-files = [
  "/etc/statime/statime.toml",
]

[package.metadata.generate-rpm]
name = "statime"
# See: https://fedoraproject.org/wiki/Licensing:Main?rd=Licensing#Good_Licenses
license = "MIT or ASL 2.0"
assets = [
  { source = "target/release/statime", dest = "/usr/bin/statime", mode = "755" },
  { source = "docs/precompiled/man/statime.8", dest = "/usr/share/man/man8/statime.8", mode = "644", doc = true },
#  { source = "docs/precompiled/man/statime.toml.5", dest = "/usr/share/man/man5/statime-toml.5", mode = "644", doc = true },
  { source = "docs/examples/conf/statime.toml.default", dest = "/usr/share/doc/statime/statime.toml.default", mode = "644", doc = true },
  { source = "docs/examples/conf/statime.toml.default", dest = "/etc/statime/statime.toml", mode = "644", config = true },
  { source = "docs/examples/conf/statime.preset", dest = "/lib/systemd/system-preset/50-statime.preset", mode = "644" },
  { source = "docs/examples/conf/statime.service", dest = "/lib/systemd/system/statime.service", mode = "644" },
  { source = "../COPYING", dest = "/usr/share/doc/statime/COPYING", mode = "644", doc = true },
  { source = "../LICENSE-APACHE", dest = "/usr/share/doc/statime/LICENSE-APACHE", mode = "644", doc = true },
  { source = "../LICENSE-MIT", dest = "/usr/share/doc/statime/LICENSE-MIT", mode = "644", doc = true },
  { source = "../CHANGELOG.md", dest = "/usr/share/doc/statime/CHANGELOG.md", mode = "644", doc = true },
  { source = "../README.md", dest = "/usr/share/doc/statime/README.md", mode = "644", doc = true },
]
