[package]
name = "statime-linux"
readme = "README.md"
description = "Linux daemon for the Statime Precision Time Protocol library"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "statime"
path = "src/main.rs"

[[bin]]
name = "statime-metrics-exporter"
path = "bin/statime-metrics-exporter.rs"

[dependencies]
statime.workspace = true

arrayvec.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
libc.workspace = true
log = { workspace = true, default-features = true }
pin-project-lite.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "time", "macros", "sync", "io-util"] }
rand = { workspace = true, default-features = false, features = ["std", "std_rng"] }
serde.workspace = true
serde_json.workspace = true

clock-steering.workspace = true
timestamped-socket.workspace = true

[package.metadata.deb]
name = "statime"
priority = "optional"
section = "net"
copyright = "Copyright (c) 2022-2023 Tweede Golf and Contributors"
license-file = "../pkg/deb/COPYRIGHT-debian"
maintainer = "Statime Maintainers <statime-maintainer@tweedegolf.com>"
maintainer-scripts = "../pkg/deb/"
extended-description = """
Statime is a work in progress Rust implementation of PTP version 2.1 (IEEE 1588-2019).
It currently implements support for acting as a master and an ordinary or a boundary clock."""
assets = [
  ["target/release/statime", "/usr/bin/statime", "755"],
  ["docs/precompiled/man/statime.8", "/usr/share/man/man8/statime.8", "644"],
  ["docs/precompiled/man/statime.toml.5", "/usr/share/man/man5/statime.toml.5", "644"],
  ["docs/examples/conf/statime.toml.default", "/usr/share/doc/statime/statime.toml.default", "644"],
  ["docs/examples/conf/statime.toml.default", "/etc/statime/statime.toml", "644"],
  ["docs/examples/conf/statime.preset", "/lib/systemd/system-preset/50-statime.preset", "644"],
  ["docs/examples/conf/statime.service", "/lib/systemd/system/statime.service", "644"],
  ["docs/examples/conf/41-statime.rules", "/etc/udev/41-statime.rules", "644"],
  ["../COPYRIGHT", "/usr/share/doc/statime/COPYRIGHT", "644"],
  ["../LICENSE-APACHE", "/usr/share/doc/statime/LICENSE-APACHE", "644"],
  ["../LICENSE-MIT", "/usr/share/doc/statime/LICENSE-MIT", "644"],
  ["../CHANGELOG.md", "/usr/share/doc/statime/CHANGELOG.md", "644"],
  ["../README.md", "/usr/share/doc/statime/README.md", "644"],
]
conf-files = [
  "/etc/statime/statime.toml",
  "/etc/udev/41-statime.rules",
]

[package.metadata.generate-rpm]
name = "statime"
# See: https://fedoraproject.org/wiki/Licensing:Main?rd=Licensing#Good_Licenses
license = "MIT or ASL 2.0"
assets = [
  { source = "target/release/statime", dest = "/usr/bin/statime", mode = "755" },
  { source = "docs/precompiled/man/statime.8", dest = "/usr/share/man/man8/statime.8", mode = "644", doc = true },
  { source = "docs/precompiled/man/statime.toml.5", dest = "/usr/share/man/man5/statime-toml.5", mode = "644", doc = true },
  { source = "docs/examples/conf/statime.toml.default", dest = "/usr/share/doc/statime/statime.toml.default", mode = "644", doc = true },
  { source = "docs/examples/conf/statime.toml.default", dest = "/etc/statime/statime.toml", mode = "644", config = true },
  { source = "docs/examples/conf/statime.preset", dest = "/lib/systemd/system-preset/50-statime.preset", mode = "644" },
  { source = "docs/examples/conf/statime.service", dest = "/lib/systemd/system/statime.service", mode = "644" },
  { source = "docs/examples/conf/41-statime.rules", dest = "/etc/udev/41-statime.rules", mode = "644", config = true },
  { source = "../COPYRIGHT", dest = "/usr/share/doc/statime/COPYRIGHT", mode = "644", doc = true },
  { source = "../LICENSE-APACHE", dest = "/usr/share/doc/statime/LICENSE-APACHE", mode = "644", doc = true },
  { source = "../LICENSE-MIT", dest = "/usr/share/doc/statime/LICENSE-MIT", mode = "644", doc = true },
  { source = "../CHANGELOG.md", dest = "/usr/share/doc/statime/CHANGELOG.md", mode = "644", doc = true },
  { source = "../README.md", dest = "/usr/share/doc/statime/README.md", mode = "644", doc = true },
]
