[package]
edition = "2021"
name = "statime-stm32"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
rtic = { version = "2.2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.1.0", features = [
    "cortex-m-systick",
    "systick-64bit",
] }
rtic-sync = "1.4.0"
embassy-sync = "0.7.0"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
critical-section = "1.2.0"
stm32f7xx-hal = { version = "0.8.0", features = ["stm32f767", "rt"] }
stm32-eth = { version = "0.8.0", features = [
    "smoltcp-phy",
    "async-await",
    "stm32f767",
] }
ieee802_3_miim = "0.8.0"
smoltcp = { version = "0.12.0", default-features = false, features = [
    "defmt",
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "multicast",
    "socket-dhcpv4",
    "socket-udp",
    "async",
] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }

statime = { path = "../statime", default-features = false }
fixed = "1.29.0"
az = "1.2.1"
static_cell = "2.1.1"
log-to-defmt = "0.1.0"
adler = { version = "1.0.2", default-features = false }

[profile.release]
debug = 2
lto = "fat"

[profile.dev]
opt-level = 2
lto = "fat"

[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false
