[package]
name = "statime"
readme = "README.md"
description = "Precision Time Protocol implementation library for embedded and desktops"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["std", "serde", "tokio"]
std = []
fuzz = ["std"]
serde = ["dep:serde"]
tokio = ["dep:tokio"]

[dependencies]
arrayvec.workspace = true
az.workspace = true
fixed.workspace = true
libm.workspace = true
log = { workspace = true, default-features = false}
rand = { workspace = true, default-features = false }
atomic_refcell.workspace = true
serde = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["sync"] }
