[package]
name = "stm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
rand_core = "0.6.3"
critical-section = "1.1"
embedded-storage = "0.3.0"
static_cell = "1.0"
embedded-io = { version = "0.4.0", features = ["async"] }

embassy-sync = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.1.0", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", features = ["nightly", "defmt", "stm32f767zi", "unstable-pac", "time-driver-any", "exti"]  }
embassy-net = { version = "0.1.0", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }

statime = { path = "../../statime", default-features = false }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "78d733f" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "78d733f" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "78d733f" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "78d733f" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "78d733f" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "78d733f" }
