[package]
name = "stm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.11"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
rand_core = "0.6.3"
smoltcp = { version = "0.9.1", default-features = false, features = ["medium-ethernet", "socket-udp"] }
critical-section = "1.1"
embedded-storage = "0.3.0"
static_cell = "1.0"
vcell = "0.1.3"
embedded-io = { version = "0.4.0", features = ["async"] }

embassy-sync = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.1.0", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", features = ["nightly", "defmt", "stm32f767zi", "unstable-pac", "time-driver-any", "exti"]  }
embassy-net = { version = "0.1.0", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-net-driver = { version = "0.1.0", features = ["defmt"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }

statime = { path = "../../statime", default-features = false }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "fb27594" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "fb27594" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "fb27594" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "fb27594" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "fb27594" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "fb27594" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "fb27594" }
